# gamestar

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: practical_demo.py
gamestar/: __init__.py  __main__.py  cli.py  debugger.py  motivate.py  scanner.py
tests/: test_cli.py  test_debugger.py  test_motivate.py  test_scanner.py
