[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamestar"
version = "1.1.1"
description = "A lightweight developer assistant for quick code scanning, debugging hints, and motivation."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Gamestar Maintainers" }
]
keywords = ["developer-tools", "security", "debugging", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3",
  "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/GAMEstar911/gamestar"
Repository = "https://github.com/GAMEstar911/gamestar"
Issues = "https://github.com/GAMEstar911/gamestar/issues"

[project.scripts]
gamestar = "gamestar.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["gamestar*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
